fix unreadable text

--- a/src/assets/css/css.css
+++ b/src/assets/css/css.css
@@ -7,82 +7,11 @@
   font-display: swap;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 body,
 html {
   height: 100%;
   font-family: open_sanslight;
   font-size: 16px;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0 0 10px;
-  text-align: center;
-}
-
-input {
-  display: inline-block;
-  outline: none;
-  border: none !important;
-}
-
-button {
-  outline: none !important;
-  border: none;
-  background: transparent;
-}
-
-button:hover,
-button:focus {
-  cursor: pointer;
-}
-
-.build-button {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
-  border: 0;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 0.8rem;
-  font-weight: 900;
-  letter-spacing: 0.075em;
-  height: 3rem;
-  line-height: 3rem;
-  padding: 0 2rem;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
-  white-space: nowrap;
-  background-color: #54E0C7;
-  box-shadow: inset 0 0 0 2px #54E0C7;
-  color: #444 !important;
-  width: 100%;
-}
-
-.build-button:hover,
-.build-button:focus {
-  box-shadow: inset 0 0 0 2px #54E0C7;
-  color: #54E0C7 !important;
-  background-color: #fff;
-}
-
-.limiter {
-  width: 100%;
-  margin: 0 auto;
 }
 
 .container-table100 {
@@ -159,16 +88,20 @@ table th.r {
   line-height: 1.2;
   font-weight: unset;
 }
-
+/*
 tbody tr:nth-child(even) {
   background-color: #f5f5f5;
-}
+} */
 
 tbody tr {
   font-size: 1.2rem;
   color: #444;
   line-height: 1.2;
   font-weight: unset;
+}
+
+tbody tr:nth-child(2n) {
+  color:#444;
 }
 
 tbody tr:hover,
